--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=mongodb+srv://kbrdsk:wj7VyG6lQAALAX9W@cluster0.tyq4g.mongodb.net/student-work?retryWrites=true&w=majority
