--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=mongodb+srv://kbrdsk:wj7VyG6lQAALAX9W@cluster0.tyq4g.mongodb.net/student-work?retryWrites=true&w=majority
+REACT_APP_API_URL=https://immense-everglades-63113.herokuapp.com/api
