--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "student-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kbrdsk.github.io/puzzle-app-student",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
