--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
-    "build": "react-scripts build",
+    "build:staging": "dotenv -e .env.staging react-scripts build",
+    "build:production": "dotenv -e .env.production react-scripts build",
+    "build": "echo \"Please use build:staging or build:production \" && exit 1",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy:staging": "npm run build:staging; node deploy",
+    "deploy:production": "npm run build:production; node deploy production"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
     "gh-pages": "^3.1.0"
   }
 }
