--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "PORT=3006 react-scripts start",
     "start:staging": "PORT=3006 dotenv -e .env.staging react-scripts start",
+    "start:production": "PORT=3006 dotenv -e .env.production react-scripts start",
     "build:staging": "dotenv -e .env.staging react-scripts build",
     "build:production": "dotenv -e .env.production react-scripts build",
     "build": "echo \"Please use build:staging or build:production \" && exit 1",
